--- a/assets/css/3-sections/_footer.scss
+++ b/assets/css/3-sections/_footer.scss
@@ -31,7 +31,7 @@ footer .u-twoThirds {
 
     .FooterUnorderedList-link {
       @include display(block);
-      width: 100%;
+      width: 150%;
       margin: 0 auto;
       text-decoration: none;
       color: white;
@@ -55,7 +55,6 @@ footer .u-twoThirds {
         margin: 0; // helps w/ extra spacing w/ display: inline-block
         line-height: 100%; // helps w/ extra spacing w/ display: inline-block
         margin-left: -4px; // helps w/ extra spacing w/ display: inline-block;
-        width: auto;
         font-size: .9rem;
       }
 
